--- a/StudentManagement/src/main/resources/application.yml
+++ b/StudentManagement/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/student_management?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=GMT
     username: root
-    password: root
+    password: 
 
 mybatis:
   mapper-locations: classpath:mappers/*.xml
